Add initial project structure and configuration

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -1,2 +1,19 @@
 /* For information on how to create your own theme, please see:
 http://ionicframework.com/docs/theming/ */
+
+@import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined";
+
+:root {
+  box-sizing: border-box;
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
