--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -8,6 +8,7 @@ http://ionicframework.com/docs/theming/ */
   position: relative;
   margin: 0;
   padding: 0;
+  user-select: none;
 }
 
 .material-symbols-outlined {
