--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -3,6 +3,11 @@ http://ionicframework.com/docs/theming/ */
 
 @import "https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined";
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
   box-sizing: border-box;
   position: relative;
