--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -8,18 +8,29 @@ http://ionicframework.com/docs/theming/ */
 @tailwind utilities;
 
 
-:root {
-  box-sizing: border-box;
-  position: relative;
-  margin: 0;
-  padding: 0;
-  user-select: none;
+@layer base {
+  :root {
+    box-sizing: border-box;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    user-select: none;
+  }
 }
 
-.material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 48
+@layer components {
+  .material-symbols-outlined {
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+  }
+}
+
+@layer utilities {
+  .hide-taskbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
